# DiscordBot

./: pyproject.toml  requirements.txt
discordbot/: main.py
discordbot/actions/: event_action.py  timed_action.py
discordbot/commands/: notification_command.py
discordbot/models/: event_models.py  supabase_models.py  user_models.py
discordbot/store/: supabase_manager.py
discordbot/util/: registers.py
src/discordbot/: main.py  settings.py  supabase_manager.py
src/discordbot/models/: discord_models.py  event_models.py  supabase_models.py
src/discordbot/util/: registers.py
